--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,17 @@ readme = "README.md"
 packages = [{include = "test_bewise"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.9,<=3.10"
 flask = "^2.3.2"
 fastapi = "^0.95.2"
+sqlalchemy = "^2.0.15"
+
+
+[tool.poetry.group.dev.dependencies]
+flake8 = ">=3.7,<5"
+mypy = "^1.3.0"
+pylint = "^2.17.4"
+wemake-python-styleguide = "^0.17.0"
 
 
 [build-system]
